--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.tedcoder.androidvideoplayer">
+    package="com.android.tedcoder.material">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.android.tedcoder.material.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -27,11 +27,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PDFViewActivity"
+            android:name="com.android.tedcoder.material.PDFViewActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.android.tedcoder.material.RawMaterialActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/ActivityTheme.Full"></activity>
+            android:screenOrientation="landscape"
+            android:theme="@style/ActivityTheme.Full" />
 
         <service android:name="com.android.tedcoder.wkvideoplayer.dlna.service.DLNAService">
 
