--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.android.tedcoder.androidvideoplayer"
+        applicationId "com.android.tedcoder.material"
         minSdkVersion 10
         targetSdkVersion 23
         versionCode 1
