--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,12 @@
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@style/ActivityTheme.Full" />
+        <activity
+            android:name="com.android.tedcoder.material.VideoViewActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            android:theme="@style/ActivityTheme.Full" />
 
         <service android:name="com.android.tedcoder.wkvideoplayer.dlna.service.DLNAService">
 
