--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
         </activity>
         <activity
             android:name="com.android.tedcoder.material.PDFViewActivity"
-            android:label="@string/app_name" />
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            android:theme="@style/ActivityTheme.Full" />
         <activity
             android:name="com.android.tedcoder.material.RawMaterialActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
