--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile project(':wkvideoplayer')
     compile project(':android-pdfview')
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.facebook.fresco:fresco:0.9.0+'
 }
