--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@style/ActivityTheme.Full" />
+        <activity
+            android:name="com.android.tedcoder.material.FrescoViewActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name" />
 
         <service android:name="com.android.tedcoder.wkvideoplayer.dlna.service.DLNAService">
 
