--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="com.android.tedcoder.material">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <permission android:name="android.permission.INTERNET" />
-    <permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission." />
+
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +30,6 @@
         </activity>
         <activity
             android:name="com.android.tedcoder.material.PDFViewActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@style/ActivityTheme.Full" />
@@ -48,6 +49,11 @@
             android:name="com.android.tedcoder.material.FrescoViewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" />
+        <activity
+            android:name="com.android.tedcoder.material.VideoPlayActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" />
 
         <service android:name="com.android.tedcoder.wkvideoplayer.dlna.service.DLNAService">
 
