--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,12 @@
             android:screenOrientation="landscape"
             android:theme="@style/ActivityTheme.Full" />
         <activity
+            android:name="com.android.tedcoder.material.AllMachineActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            android:theme="@style/ActivityTheme.Full" />
+        <activity
             android:name="com.android.tedcoder.material.VideoViewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
