--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile project(':android-pdfview')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.fresco:fresco:0.9.0+'
+    compile 'com.android.support:gridlayout-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
 }
