--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission." />
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
@@ -31,8 +30,6 @@
         </activity>
         <activity
             android:name="com.android.tedcoder.material.PDFViewActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape"
             android:theme="@style/ActivityTheme.Full" />
         <activity
             android:name="com.android.tedcoder.material.RawMaterialActivity"
@@ -62,6 +59,16 @@
             android:name="com.android.tedcoder.material.FrescoViewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" />
+        <activity
+            android:name="com.android.tedcoder.material.NFCActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <data android:mimeType="text/plain"></data>
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.android.tedcoder.material.VideoPlayActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
